concord_macros/tests/dsl/fail/fail_base_fragment.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client BaseFragmentApi {
        base "https://example.com#fragment"
    }
}

fn main() {}
